feat: add main sections

--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
-    <header class="page-header"></header>
-    <main></main>
+    <header class="page-header">
+      <nav class="page-nav"></nav>
+    </header>
+    <main>
+      <section class="welcome"></section>
+      <section class="features"></section>
+      <section class="search"></section>
+      <section class="subscription"></section>
+    </main>
     <footer class="page-footer"></footer>
   </body>
 </html>
