feat: add setions title

--- a/index.html
+++ b/index.html
@@ -9,10 +9,20 @@
       <nav class="page-nav"></nav>
     </header>
     <main>
-      <section class="welcome"></section>
-      <section class="features"></section>
-      <section class="search"></section>
-      <section class="subscription"></section>
+      <section class="welcome">
+        <h1 class="visually-hidden">Добро пожаловать в Седону!</h1>
+      </section>
+      <section class="features">
+        <h2 class="section-title">
+          Седона — небольшой городок в Аризоне, заслуживающий большего!
+        </h2>
+      </section>
+      <section class="search">
+        <h2 class="visually-hidden">ПОИСК ГОСТИНИЦЫ В седоне</h2>
+      </section>
+      <section class="subscription">
+        <h2 class="section-title">Подпишитесь на рассылку</h2>
+      </section>
     </main>
     <footer class="page-footer"></footer>
   </body>
