feat: add header content

--- a/index.html
+++ b/index.html
@@ -6,7 +6,29 @@
   </head>
   <body>
     <header class="page-header">
-      <nav class="page-nav"></nav>
+      <nav class="page-nav">
+        <a href="#" class="logo">
+          <img src="" alt="Логотип города Седона" />
+        </a>
+        <ul class="page-nav-list">
+          <li class="page-nav-list-item">
+            <a href="#" class="page-nav-list-link">Главная</a>
+          </li>
+          <li class="page-nav-list-item">
+            <a href="#" class="page-nav-list-link">О Седоне</a>
+          </li>
+          <li class="page-nav-list-item">
+            <a href="catalog.html" class="page-nav-list-link">Гостиницы</a>
+          </li>
+        </ul>
+        <ul class="user-nav-list">
+          <li class="user-nav-list-item">Поиск</li>
+          <li class="user-nav-list-item">Избранное</li>
+          <li class="user-nav-list-item">
+            <a href="catalog.html" class="btn">Хочу сюда!</a>
+          </li>
+        </ul>
+      </nav>
     </header>
     <main>
       <section class="welcome">
