--- a/index.html
+++ b/index.html
@@ -33,11 +33,53 @@
     <main>
       <section class="welcome">
         <h1 class="visually-hidden">Добро пожаловать в Седону!</h1>
+        <img src="" alt="Добро пожаловать в Седону!" />
       </section>
       <section class="features">
         <h2 class="section-title">
           Седона — небольшой городок в Аризоне, заслуживающий большего!
         </h2>
+        <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
+        <ol class="features-list">
+          <li class="features-item">
+            <h3 class="features-title">Настоящий городок</h3>
+            <p>— №1 —</p>
+            <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+            <dl class="features-second-list">
+              <dt class="features-title">Жильё</dt>
+              <dt>Рекомендуем пожить в настоящем мотеле, всё как в кино!</dt>
+              <dt class="features-title">Еда</dt>
+              <dt>
+                Всегда заказывайте топовый фирменный бургер, вы не
+                разочаруетесь!
+              </dt>
+              <dt class="features-title">Сувениры</dt>
+              <dt>
+                Не только китайского, но и настоящего местного производства!
+              </dt>
+            </dl>
+          </li>
+          <li class="feature-item">
+            <h3 class="feature-title">Там есть мост дьявола</h3>
+            <p>— №2 —</p>
+            <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+          </li>
+          <li class="feature-item">
+            <h3 class="feature-title">Небольшая площадь</h3>
+            <p>— №3 —</p>
+            <p>Все достопримечательности находятся очень близко</p>
+          </li>
+          <li class="feature-item">
+            <h3 class="feature-title">Красивая дорога</h3>
+            <p>— №4 —</p>
+            <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          </li>
+          <li class="feature-item">
+            <h3 class="feature-title">Мало туристов</h3>
+            <p>— №5 —</p>
+            <p>Большинство едет в Гранд Каньон и толпится там</p>
+          </li>
+        </ol>
       </section>
       <section class="search">
         <h2 class="visually-hidden">ПОИСК ГОСТИНИЦЫ В седоне</h2>
