--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
             <a href="#" class="page-nav-list-link">О Седоне</a>
           </li>
           <li class="page-nav-list-item">
-            <a href="catalog.html" class="page-nav-list-link">Гостиницы</a>
+            <a href="./catalog.html" class="page-nav-list-link">Гостиницы</a>
           </li>
         </ul>
         <ul class="user-nav-list">
           <li class="user-nav-list-item">Поиск</li>
           <li class="user-nav-list-item">Избранное</li>
           <li class="user-nav-list-item">
-            <a href="catalog.html" class="btn">Хочу сюда!</a>
+            <a href="./catalog.html" class="btn">Хочу сюда!</a>
           </li>
         </ul>
       </nav>
@@ -82,10 +82,25 @@
         </ol>
       </section>
       <section class="search">
-        <h2 class="visually-hidden">ПОИСК ГОСТИНИЦЫ В седоне</h2>
+        <h2 class="section-title">Заинтересовались?</h2>
+        <p>
+          Укажите предполагаемые даты поездки, и мы покажем вам лучшие
+          предложения гостиниц в Седоне
+        </p>
+        <a href="./catalog.html" class="btn">ПОИСК ГОСТИНИЦЫ В седоне</a>
       </section>
       <section class="subscription">
         <h2 class="section-title">Подпишитесь на рассылку</h2>
+        <p>
+          Только полезная информация и никакого спама, честное бойскаутское!
+        </p>
+        <form action="https://echo.htmlacademy.ru/" class="subscription-form">
+          <label for="subscription-email" class="visually-hidden"
+            >Ваш e-mail</label
+          >
+          <input type="email" name="email" id="subscription-email" />
+          <button class="btn" type="submit">Подписаться</button>
+        </form>
       </section>
     </main>
     <footer class="page-footer"></footer>
