feat: add footer content

--- a/index.html
+++ b/index.html
@@ -103,6 +103,28 @@
         </form>
       </section>
     </main>
-    <footer class="page-footer"></footer>
+    <footer class="page-footer">
+      <ul class="social-list">
+        <li class="social-list-item">
+          <a href="https://facebook.com/htmlacademy" class="social-link"
+            ><span class="visually-hidden">Facebook</span></a
+          >
+        </li>
+        <li class="social-list-item">
+          <a href="https://twitter.com/htmlacademy_ru" class="social-link"
+            ><span class="visually-hidden">Twitter</span></a
+          >
+        </li>
+        <li class="social-list-item">
+          <a href="https://youtube.com/c/HTMLAcademyRUS" class="social-link"
+            ><span class="visually-hidden">Youtube</span></a
+          >
+        </li>
+      </ul>
+      <a href="tel:+78128121212" class="footer-phone">+7 (812) 812-12-12</a>
+      <a href="https://htmlacademy.ru" class="footer-logo">
+        <img src="" alt="Логотип HTMLAcademy" />
+      </a>
+    </footer>
   </body>
 </html>
