fix: fix definition list in features section

--- a/index.html
+++ b/index.html
@@ -47,16 +47,16 @@
             <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
             <dl class="features-second-list">
               <dt class="features-title">Жильё</dt>
-              <dt>Рекомендуем пожить в настоящем мотеле, всё как в кино!</dt>
+              <dd>Рекомендуем пожить в настоящем мотеле, всё как в кино!</dd>
               <dt class="features-title">Еда</dt>
-              <dt>
+              <dd>
                 Всегда заказывайте топовый фирменный бургер, вы не
                 разочаруетесь!
-              </dt>
+              </dd>
               <dt class="features-title">Сувениры</dt>
-              <dt>
+              <dd>
                 Не только китайского, но и настоящего местного производства!
-              </dt>
+              </dd>
             </dl>
           </li>
           <li class="feature-item">
