feat: add header and footer to catalog page

--- a/catalog.html
+++ b/catalog.html
@@ -4,5 +4,55 @@
     <meta charset="utf-8" />
     <title>HTML Academy: Седона - Гостиницы</title>
   </head>
-  <body></body>
+  <body>
+    <header class="page-header">
+      <nav class="page-nav">
+        <a href="./index.html" class="logo">
+          <img src="" alt="Логотип города Седона" />
+        </a>
+        <ul class="page-nav-list">
+          <li class="page-nav-list-item">
+            <a href="./index.html" class="page-nav-list-link">Главная</a>
+          </li>
+          <li class="page-nav-list-item">
+            <a href="./index.html" class="page-nav-list-link">О Седоне</a>
+          </li>
+          <li class="page-nav-list-item">
+            <a href="#" class="page-nav-list-link">Гостиницы</a>
+          </li>
+        </ul>
+        <ul class="user-nav-list">
+          <li class="user-nav-list-item">Поиск</li>
+          <li class="user-nav-list-item">Избранное</li>
+          <li class="user-nav-list-item">
+            <a href="#" class="btn">Хочу сюда!</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main></main>
+    <footer class="page-footer">
+      <ul class="social-list">
+        <li class="social-list-item">
+          <a href="https://facebook.com/htmlacademy" class="social-link"
+            ><span class="visually-hidden">Facebook</span></a
+          >
+        </li>
+        <li class="social-list-item">
+          <a href="https://twitter.com/htmlacademy_ru" class="social-link"
+            ><span class="visually-hidden">Twitter</span></a
+          >
+        </li>
+        <li class="social-list-item">
+          <a href="https://youtube.com/c/HTMLAcademyRUS" class="social-link"
+            ><span class="visually-hidden">Youtube</span></a
+          >
+        </li>
+      </ul>
+      <a href="tel:+78128121212" class="footer-phone">+7 (812) 812-12-12</a>
+      <a href="https://htmlacademy.ru" class="footer-logo">
+        <img src="" alt="Логотип HTMLAcademy" />
+      </a>
+    </footer>
+  </body>
 </html>
